# vintage-timex-scout

./: .env.example  .gitignore  BUILD_JOURNAL.md  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements.txt
docs/: data-capture.md
scripts/: check_ebay.py  ebay_capture.js
src/timex_scout/: __init__.py  config.py  gate.py  judge.py  models.py  pipeline.py  prerank.py  profile.py  taste.py
src/timex_scout/fixtures/: ebay_sample.json
src/timex_scout/sources/: __init__.py  base.py  ebay.py  ebay_search.py  etsy.py
src/timex_scout/web/: __init__.py  app.py
src/timex_scout/web/templates/: index.html
state/: last_pull.json
tests/: test_ebay_search.py  test_ebay_source.py  test_etsy.py  test_gate.py  test_prerank.py  test_taste.py  test_web.py
