[project]
name = "timex-scout"
version = "0.1.0"
description = "Triage tool that surfaces a ranked, explained shortlist of vintage Timex watches worth a collector's attention."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
