[project]
name = "timex-scout"
version = "0.1.0"
description = "Triage tool that surfaces a ranked, explained shortlist of vintage Timex watches worth a collector's attention."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Bundle non-Python data files into the installed package, so `pip install .` (e.g. on a
# host) ships the HTML templates and the listings fixture — not just the .py code.
[tool.setuptools.package-data]
timex_scout = ["web/templates/*.html", "fixtures/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
